feat: Complete Episode Creation Workflow with multi-agent AI system
- Implement comprehensive Episode Multi-Agent Workflow for choose-your-own-adventure episodes
- Add Story Director, Scene Planner, State Agent, and Audio Agents (Music/SFX)
- Integrate ElevenLabs Music and Sound Effects APIs with best practices
- Create Episode Studio UI with AI SDK Elements (reasoning, chain-of-thought)
- Add database schema for episodes, scenes, bibles, and audio storage
- Implement Supabase Storage integration for episode audio files
- Add comprehensive testing framework for multi-agent workflow
- Create API endpoints for episode orchestration with streaming support
- Add personal account navigation and episode creation pages
- Update TypeScript types and database migrations
- Include AI Elements components with official AI SDK patterns

--- a/apps/web/public/locales/en/common.json
+++ b/apps/web/public/locales/en/common.json
@@ -58,6 +58,7 @@
   "back": "Back",
   "routes": {
     "home": "Home",
+    "createEpisode": "Create Episode",
     "account": "Account",
     "members": "Members",
     "billing": "Billing",
